--- a/index_styles.css
+++ b/index_styles.css
@@ -14,15 +14,22 @@ h1, h2, h3{
   font-family: 'Times New Roman', Times, serif;
   
 }
-p{
-  color: azure;
-  font-size: small;
-}
 nav{
   text-align: left;
   color: azure;
    
 }
+
+/*Body Styles*/
+body{
+  margin-left: auto;
+  margin-right: auto;
+}
+p{
+  color: azure;
+  font-size: small;
+}
+
 img{
   margin-left: 5%;
   align-content: left;
