--- a/index_styles.css
+++ b/index_styles.css
@@ -14,11 +14,39 @@ h1, h2, h3{
   font-family: 'Times New Roman', Times, serif;
   
 }
-nav{
-  text-align: left;
-  color: azure;
-   
+
+nav#topLinks a:link, nav#topLinks a:visited {
+	color: white;
 }
+
+nav#topLinks a:hover, nav#topLinks a:active {
+	color: rgb(248, 237, 212);
+}
+
+nav#mainLinks ul li {
+	background-color: rgb(53, 98, 42);	
+	display: block;
+	float: left;
+	text-align: center;
+	width: 20%;	
+}
+
+nav#mainLinks ul li a {
+	color: white;	
+	display: block;
+	height: 2.5em;	
+	text-align: center;
+	line-height: 2.5em;	
+}
+
+nav#mainLinks a:link, nav#mainLinks a:visited {
+	color: white;
+}
+
+nav#mainLinks a:hover, nav#mainLinks a:active {
+	background-color: rgb(51, 51, 45);
+}
+
 
 /*Body Styles*/
 body{
